--- a/lagou/package.json
+++ b/lagou/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "element-ui": "^2.11.1",
+    "font-awesome": "^4.7.0",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "swiper": "^4.5.0",
