--- a/lagou/package.json
+++ b/lagou/package.json
@@ -14,6 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "animate.css": "^3.7.2",
     "axios": "^0.19.0",
     "element-ui": "^2.11.1",
     "font-awesome": "^4.7.0",
