--- a/lagou/.project
+++ b/lagou/.project
@@ -25,11 +25,16 @@
 			</matcher>
 		</filter>
 		<filter>
-<<<<<<< HEAD
 			<id>1564395403470</id>
-=======
-			<id>1564381358762</id>
->>>>>>> 0e2844c48dae0cfc17cf855049e9317e7c69c211
+			<name></name>
+			<type>26</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-node_modules</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1564651610295</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
